dragdrop forms for pro settings

--- a/src/app/modules/settings-v2/pro/assets/assets.component.html
+++ b/src/app/modules/settings-v2/pro/assets/assets.component.html
@@ -9,7 +9,8 @@
     <div class="m-form__field--asset">
       <div class="m-form__row--label">
         <label for="logo" i18n>Logo</label>
-        <m-tooltip icon="help"
+        <m-tooltip
+          ><span m-tooltip--anchor>𝒊</span
           ><ng-container i18n
             >This will be displayed on the top left of your site</ng-container
           ></m-tooltip
@@ -50,7 +51,8 @@
     <div class="m-form__field--asset">
       <div class="m-form__row--label">
         <label for="background" i18n>Background Image</label>
-        <m-tooltip icon="help"
+        <m-tooltip
+          ><span m-tooltip--anchor>𝒊</span
           ><ng-container i18n
             >This will be displayed as the background of your site</ng-container
           ></m-tooltip
