--- a/src/app/common/components/draggable-list/list.component.scss
+++ b/src/app/common/components/draggable-list/list.component.scss
@@ -17,8 +17,6 @@ m-draggableList {
     transition: all ease 300ms;
 
     &.dndDragover {
-      // padding-top: 16px;
-      // padding-bottom: 16px;
       @include m-theme() {
         background-color: rgba(themed($m-black), 0.05);
         box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
@@ -28,7 +26,7 @@ m-draggableList {
       li.m-draggableList__listItem {
         &:first-child {
           @include m-theme() {
-            border-top: 1px solid themed($m-grey-50);
+            border-top: 1px solid themed($m-borderColor--primary);
           }
         }
       }
@@ -42,8 +40,8 @@ m-draggableList {
     padding: 0;
     margin: 0;
     @include m-theme() {
-      border: 1px solid themed($m-grey-50);
-      color: themed($m-grey-800);
+      border: 1px solid themed($m-borderColor--primary);
+      color: themed($m-textColor--primary);
     }
     // &:first-child {
     &:not(.m-draggableList__listHeader) {
@@ -55,7 +53,7 @@ m-draggableList {
     &.m-draggableList__listHeader {
       @include m-theme() {
         // border-bottom: none;
-        color: themed($m-grey-300);
+        color: themed($m-textColor--tertiary);
       }
     }
   }
@@ -70,7 +68,7 @@ m-draggableList {
 
     @include m-theme() {
       border: none;
-      border-right: 1px solid themed($m-grey-50);
+      border-right: 1px solid themed($m-borderColor--primary);
       background-color: themed($m-white);
     }
     &input {
@@ -99,7 +97,7 @@ m-draggableList {
     transition: all 0.3s ease;
 
     @include m-theme() {
-      color: themed($m-grey-300);
+      color: themed($m-textColor--tertiary);
     }
     &.handle {
       font-size: 20px;
