--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -21,6 +21,7 @@
         <a
           class="m-sidebarNavigation__item m-sidebarNavigation__item--user"
           [routerLink]="['/' + user.username]"
+          [routerLinkActive]="'m-sidebarNavigation__item--active'"
           (click)="toggle()"
         >
           <img
@@ -38,7 +39,6 @@
           class="m-sidebarNavigation__item"
           [routerLink]="['/newsfeed/subscriptions']"
           [routerLinkActive]="'m-sidebarNavigation__item--active'"
-          [routerLinkActiveOptions]="{ exact: true }"
           (click)="toggle()"
         >
           <m-tooltip
@@ -60,9 +60,8 @@
       <li>
         <a
           class="m-sidebarNavigation__item"
-          [routerLink]="['/newsfeed/global/top']"
+          routerLink="/discovery"
           [routerLinkActive]="'m-sidebarNavigation__item--active'"
-          [routerLinkActiveOptions]="{ exact: true }"
           (click)="toggle()"
         >
           <m-tooltip
