--- a/src/app/common/layout/v3-topbar/v3-topbar.component.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.scss
@@ -16,10 +16,6 @@
   }
 }
 
-.m-pageLayout__pane--main {
-  height: 100%;
-}
-
 .m-v3Topbar__middleColumn {
   width: $layoutMainFullWidth;
 }
@@ -51,7 +47,7 @@
   }
 
   @include m-theme() {
-    background-color: themed($m-bgColor--primary);
+    background-color: themed($m-bgColor--secondary);
     border-bottom: 1px solid themed($m-borderColor--primary);
   }
 
@@ -131,7 +127,7 @@
         display: inline-flex;
         flex-direction: row;
         align-items: center;
-        padding: 0 24px;
+        padding: 0 40px;
         height: 100%;
 
         @media screen and(max-width: $m-grid-max-mobile) {
