--- a/src/app/modules/newsfeed/activity/activity.component.scss
+++ b/src/app/modules/newsfeed/activity/activity.component.scss
@@ -11,12 +11,12 @@ m-activity {
   }
 
   @include m-theme() {
-    background: themed($m-bgColor--primary);
+    background: themed($m-bgColor--secondary);
   }
 
   .m-comment .minds-avatar {
     @include m-theme() {
-      background: themed($m-bgColor--primary);
+      background: themed($m-bgColor--secondary);
     }
   }
 }
