--- a/src/app/modules/newsfeed/newsfeed.component.html
+++ b/src/app/modules/newsfeed/newsfeed.component.html
@@ -7,6 +7,7 @@
   [class.m-newsfeed--2019]="!newNavigation"
   [class.mdl-grid]="!newNavigation"
   [class.m-pageLayout__container]="newNavigation"
+  m-pageLayout__container
 >
   <div
     class="mdl-cell mdl-cell--4-col m-newsfeed--sidebar m-newsfeed__sidebar"
@@ -130,7 +131,7 @@
     class="m-newsfeed--feed"
     [class.mdl-cell]="!newNavigation"
     [class.mdl-cell--8-col]="!newNavigation"
-    [class.m-pageLayout__pane--main]="newNavigation"
+    m-pageLayout__pane="main"
     [ngClass]="{ 'm-newsfeed--logged-out': !session.getLoggedInUser() }"
   >
     <div class="mdl-card m-newsfeed__CompactHashtagSelector">
@@ -149,7 +150,7 @@
     class="m-newsfeed--boost-sidebar m-newsfeed__sidebar"
     [class.mdl-cell]="!newNavigation"
     [class.mdl-cell--4-col]="!newNavigation"
-    [class.m-pageLayout__pane--right]="newNavigation"
+    m-pageLayout__pane="right"
     *ngIf="showRightSidebar || newNavigation"
   >
     <ng-container *mIfFeature="'suggested-users'">
