--- a/src/app/common/read-more/button.component.scss
+++ b/src/app/common/read-more/button.component.scss
@@ -8,8 +8,8 @@
   @include m-theme() {
     background: linear-gradient(
       to bottom,
-      rgba(themed($m-bgColor--primary), 0) 0%,
-      rgba(themed($m-bgColor--primary), 1) 50%
+      rgba(themed($m-bgColor--secondary), 0) 0%,
+      rgba(themed($m-bgColor--secondary), 1) 50%
     );
   }
 
