--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -35,13 +35,14 @@ m-activity__content {
 .m-activityContent__media--image,
 .m-activityContent__media--richEmbed {
   @include m-theme() {
-    background: themed($m-bgColor--secondary);
+    background: themed($m-bgColor--primary);
   }
 }
 
 .m-activityContent__message {
   font-size: 15px;
   padding: 0px $activity-padding-lr 16px;
+  white-space: pre-line;
 
   &.m-activityContent__message--isTextOnly {
     word-break: break-word;
@@ -64,9 +65,9 @@ m-activity__content {
 
   a {
     text-decoration: none;
-    font-weight: 600;
+    // font-weight: 600;
     @include m-theme() {
-      color: themed($m-textColor--secondary);
+      color: themed($m-textColor--tertiary);
     }
 
     &:hover {
@@ -107,6 +108,7 @@ m-activity__content {
 }
 
 .m-activityContent__media--richEmbed {
+  margin-top: 16px;
   img {
     width: 100%;
     height: 220px;
@@ -124,6 +126,9 @@ m-activity__content {
   h2 {
     font-size: 15px;
     text-decoration: none;
+    @include m-theme() {
+      color: themed($m-textColor--secondary) !important;
+    }
   }
   .m-blurb {
     display: none;
@@ -139,5 +144,5 @@ m-activity__content {
 }
 
 .m-activityContent__remind {
-  padding: 0px $activity-padding-lr 16px;
+  padding: 16px $activity-padding-lr 16px;
 }
