--- a/src/app/modules/newsfeed/activity/remind/remind.component.scss
+++ b/src/app/modules/newsfeed/activity/remind/remind.component.scss
@@ -6,7 +6,7 @@ m-activity__remind {
   width: 100%;
 
   @include m-theme() {
-    background: themed($m-bgColor--primary);
+    background: themed($m-bgColor--secondary);
     border: 1px solid themed($m-borderColor--primary);
   }
 }
