--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -1,4 +1,4 @@
-<div class="mdl-grid" style="max-width:900px; justify-content: center;">
+<div class="m-pageLayout__container">
   <div class="m-loader" *ngIf="inProgress">
     <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
   </div>
@@ -13,10 +13,7 @@
     >
   </div>
 
-  <div
-    class="mdl-cell mdl-cell--8-col"
-    style="max-width: 500px; padding-bottom: 37px;"
-  >
+  <div class="m-pageLayout__pane--main" style="padding-bottom: 37px;">
     <div class="m--spam-notice mdl-shadow--2dp" *ngIf="activity?.spam">
       <ng-container i18n="@@MINDS__NEWSFEED__SINGLE__FLAGGED_AS_SPAM"
         >This activity is flagged as spam.</ng-container
@@ -45,7 +42,11 @@
       </minds-activity>
     </div>
 
-    <div class="minds-list" *ngIf="activity && !showLegacyActivity">
+    <div
+      class="minds-list"
+      style="padding: 20px 40px;"
+      *ngIf="activity && !showLegacyActivity"
+    >
       <m-activity
         [entity]="activity"
         [displayOptions]="{
