--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -1,4 +1,7 @@
-<div class="m-pageLayout__container">
+<div
+  [class.m-pageLayout__container]="!showLegacyActivity"
+  [class.m-newsfeed__single--legacy]="showLegacyActivity"
+>
   <div class="m-loader" *ngIf="inProgress">
     <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
   </div>
@@ -13,7 +16,10 @@
     >
   </div>
 
-  <div class="m-pageLayout__pane--main" style="padding-bottom: 37px;">
+  <div
+    [class.m-pageLayout__pane--main]="!showLegacyActivity"
+    style="padding-bottom: 37px;"
+  >
     <div class="m--spam-notice mdl-shadow--2dp" *ngIf="activity?.spam">
       <ng-container i18n="@@MINDS__NEWSFEED__SINGLE__FLAGGED_AS_SPAM"
         >This activity is flagged as spam.</ng-container
