(chore): show right pane for single view activity

--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -62,6 +62,8 @@
       ></m-activity>
     </div>
   </div>
+
+  <div *ngIf="!showLegacyActivity" m-pageLayout__pane="right"></div>
 </div>
 
 <m-social-icons
