--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -26,6 +26,7 @@
         </p>
       </div>
     </div>
+    <div class="m-form__fieldGroupSpacer"></div>
     <div class="m-form__field--text stretchedField hasValidationRow">
       <div class="m-form__row--label">
         <label for="name" i18n>New Password</label>
