--- a/src/app/modules/settings-v2/pro/domain/domain.component.html
+++ b/src/app/modules/settings-v2/pro/domain/domain.component.html
@@ -1,9 +1,10 @@
 <div class="m-settingsV2__desc">
-  Customize your site domain.
+  Contact info@minds.com to customize your site domain.
   <a class="m-form__upgradeLink" routerLink="/pro" *ngIf="!isActive"
     >Upgrade to Pro</a
   >
 </div>
+
 <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
     <div class="m-form__field--text stretchedField hasValidationRow">
