--- a/src/app/modules/settings-v2/pro/theme/theme.component.html
+++ b/src/app/modules/settings-v2/pro/theme/theme.component.html
@@ -261,7 +261,7 @@
       [saving]="inProgress"
       (click)="submit()"
     >
-      Save Settings
+      Save Theme
     </m-shadowboxSubmitButton>
   </div>
 </form>
