--- a/src/app/modules/settings-v2/settings-v2.component.html
+++ b/src/app/modules/settings-v2/settings-v2.component.html
@@ -1,20 +1,22 @@
 <div class="m-settingsV2 m-page m-pageLayout__container" *ngIf="init">
   <m-nestedMenu
     class="m-settingsV2__mainMenu m-pageLayout__pane--right"
-    [ngClass]="{ showMainMenuOnMobile: showMainMenuOnMobile }"
+    [ngClass]="{ onMainNav: onMainNav }"
+    [disableActiveClass]="onMainNav"
     [menus]="mainMenus"
-    (itemSelected)="showMainMenuOnMobile = false"
+    parentRoute="/settings/canary"
+    (itemSelected)="mainMenuItemSelected()"
   ></m-nestedMenu>
   <div
     class="m-settingsV2__secondaryPane m-pageLayout__pane--main"
-    [ngClass]="{ showSecondaryMenuOnMobile: !showMainMenuOnMobile }"
+    [ngClass]="{ onSecondaryNav: !onMainNav }"
   >
     <m-nestedMenu
       *ngIf="secondaryPaneIsMenu"
       class="m-settingsV2__secondaryMenuView"
       isNested="true"
       [menus]="secondaryMenus[menuHeaderId]"
-      (clickedBack)="showMainMenuOnMobile = true"
+      (clickedBack)="secondaryMenuClickedBack()"
     ></m-nestedMenu>
 
     <ng-container *ngIf="!secondaryPaneIsMenu">
