--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -27,19 +27,11 @@
       </div>
     </div>
     <div class="m-form__fieldGroupSpacer"></div>
-    <div class="m-form__field--text stretchedField hasValidationRow">
+    <div class="m-form__field--text stretchedField">
       <div class="m-form__row--label">
         <label for="name" i18n>New Password</label>
       </div>
-      <div
-        class="m-form__row--input"
-        [ngClass]="{
-          invalid:
-            newPassword.dirty &&
-            !newPassword.hasError('required') &&
-            !newPasswordValid
-        }"
-      >
+      <div class="m-form__row--input">
         <m-popover (change)="onPopoverChange($event)" #popover>
           <input
             type="password"
@@ -54,17 +46,6 @@
           />
         </m-popover>
       </div>
-      <div class="m-form__row--validation">
-        <p
-          *ngIf="
-            newPassword.dirty &&
-            !newPassword.hasError('required') &&
-            !newPasswordValid
-          "
-        >
-          Invalid password format.
-        </p>
-      </div>
     </div>
     <div class="m-form__field--text stretchedField hasValidationRow">
       <div class="m-form__row--label">
@@ -74,7 +55,8 @@
         class="m-form__row--input"
         [ngClass]="{
           invalid:
-            (confirmNewPassword.touched || confirmNewPassword.dirty) &&
+            confirmNewPassword.touched &&
+            confirmNewPassword.dirty &&
             confirmNewPassword.invalid
         }"
       >
@@ -91,7 +73,8 @@
       <div class="m-form__row--validation">
         <p
           *ngIf="
-            (confirmNewPassword.touched || confirmNewPassword.dirty) &&
+            confirmNewPassword.touched &&
+            confirmNewPassword.dirty &&
             confirmNewPassword.hasError('passwordMatch')
           "
         >
