--- a/src/app/modules/settings-v2/settings-v2.component.html
+++ b/src/app/modules/settings-v2/settings-v2.component.html
@@ -7,6 +7,7 @@
     parentRoute="/settings/canary"
     (itemSelected)="mainMenuItemSelected()"
   ></m-nestedMenu>
+
   <div
     class="m-settingsV2__secondaryPane m-pageLayout__pane--main"
     [ngClass]="{ onSecondaryNav: !onMainNav }"
@@ -39,5 +40,6 @@
         </div>
       </div>
     </ng-container>
+    <!-- <div class="m-settingsV2__secondarySpacer"></div> -->
   </div>
 </div>
