disable active menu item on narrow screens

--- a/src/app/common/layout/nested-menu/nested-menu.component.scss
+++ b/src/app/common/layout/nested-menu/nested-menu.component.scss
@@ -138,7 +138,7 @@ m-nestedMenu {
 
     @media screen and (max-width: $layoutMax2ColWidth) {
       padding: 14px 24px;
-      .m-nestedMenu__itemWrapper--active {
+      &.m-nestedMenu__itemWrapper--active {
         &.disableActiveClass {
           @include m-theme {
             color: themed($m-textColor--secondary);
