reskin blocked channels component

--- a/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.html
+++ b/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.html
@@ -1,1 +1,56 @@
-<m-settings__blockedChannels></m-settings__blockedChannels>
+<div
+  *ngFor="let channel of channels | async"
+  class="m-settingsV2BlockedChannel"
+>
+  <a
+    class="m-settingsV2BlockedChannel__detailsWrapper"
+    [routerLink]="['/', channel.username]"
+  >
+    <div class="m-settingsV2BlockedChannel__avatar">
+      <img [src]="getChannelIcon(channel)" />
+    </div>
+
+    <span class="m-settingsV2BlockedChannel__username">
+      {{ channel.username }}
+    </span>
+  </a>
+
+  <div class="m-settingsV2BlockedChannel__actions">
+    <!-- *ngIf="!channel._unblocked; else blockButtonTemplate" -->
+    <m-shadowboxSubmitButton
+      [disabled]="channel._saving"
+      [saving]="channel._saving"
+      color="grey"
+      (click)="unblock(channel)"
+    >
+      <i class="material-icons">person_add</i><span i18n>Unblock</span>
+    </m-shadowboxSubmitButton>
+
+    <!-- <ng-template #blockButtonTemplate>
+      <m-shadowboxSubmitButton
+        *ngIf="!channel._unblocked; else blockButtonTemplate"
+        [disabled]="channel._saving"
+        [saving]="channel._saving"
+        color="red"
+        (click)="block(channel)"
+      >
+        <i class="material-icons">person_add</i><span i18n>Block</span>
+      </m-shadowboxSubmitButton>
+    </ng-template> -->
+  </div>
+</div>
+
+<!-- -->
+
+<infinite-scroll
+  *ngIf="moreData"
+  distance="25%"
+  (load)="loadMore()"
+  [moreData]="moreData"
+  [inProgress]="inProgress"
+>
+</infinite-scroll>
+
+<div *ngIf="!this.channels" class="m-settingsV2__desc">
+  You haven't blocked any channels.
+</div>
