Removed duplicate "Add Rewards" button and tidied component #2359

--- a/src/app/modules/wire/channel/channel.component.html
+++ b/src/app/modules/wire/channel/channel.component.html
@@ -30,9 +30,8 @@
       Rewards
     </h2>
 
-    <m-tooltip icon="help" i18n="@@WIRE__CHANNEL__REWARDS_TOOLTIP">
-      You can configure rewards to give to your supporters in exchange for
-      tokens
+    <m-tooltip icon="help" i18n="@@WIRE__CHANNEL__REWARDS_PARENT_TOOLTIP">
+      Give your supporters something in exchange for tokens or cash.
     </m-tooltip>
 
     <span
