--- a/src/app/modules/wire/channel/tiers.component.html
+++ b/src/app/modules/wire/channel/tiers.component.html
@@ -5,24 +5,15 @@
     [innerText]="rewards.description"
   ></p>
 
-  <textarea
-    *ngIf="editing"
-    class="m-wire-channel--description-editor m-border"
-    [(ngModel)]="rewards.description"
-    [autoGrow]
-    placeholder="About your offerings. eg. Describe what your supporters will receive…"
-    i18n-placeholder="@@WIRE__CHANNEL__REWARD_DESCRIPTION_PLACEHOLDER"
-  ></textarea>
-
   <m-wire-channel-table
-    type="tokens"
+    [type]="'tokens'"
     [(rewards)]="rewards.rewards.tokens"
     [(editing)]="editing"
     [channel]="user"
   ></m-wire-channel-table>
 
   <m-wire-channel-table
-    type="money"
+    [type]="'money'"
     [(rewards)]="rewards.rewards.money"
     [(editing)]="editing"
     [channel]="user"
