--- a/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.html
+++ b/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <span class="m-settingsV2BlockedChannel__username">
-      {{ channel.username }}
+      @{{ channel.username }}
     </span>
   </a>
 
@@ -25,23 +25,18 @@
     >
       <i class="material-icons">person_add</i><span i18n>Unblock</span>
     </m-shadowboxSubmitButton>
-
     <!-- <ng-template #blockButtonTemplate>
       <m-shadowboxSubmitButton
-        *ngIf="!channel._unblocked; else blockButtonTemplate"
         [disabled]="channel._saving"
         [saving]="channel._saving"
         color="red"
         (click)="block(channel)"
       >
-        <i class="material-icons">person_add</i><span i18n>Block</span>
+        <i class="material-icons">block</i><span i18n>Block</span>
       </m-shadowboxSubmitButton>
     </ng-template> -->
   </div>
 </div>
-
-<!-- -->
-
 <infinite-scroll
   *ngIf="moreData"
   distance="25%"
@@ -50,7 +45,6 @@
   [inProgress]="inProgress"
 >
 </infinite-scroll>
-
 <div *ngIf="!this.channels" class="m-settingsV2__desc">
   You haven't blocked any channels.
 </div>
