--- a/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.scss
+++ b/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.scss
@@ -1,11 +1,12 @@
 m-settingsV2__blockedChannels {
+  display: block;
   .m-settingsV2BlockedChannel {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    padding: 8px;
+    padding: 8px 0;
     margin-bottom: 8px;
-    @media screen and (max-width: $max-mobile) {
+    @media screen and (max-width: 632px) {
       margin-bottom: 12px;
       flex-flow: row wrap;
       > * {
@@ -17,13 +18,18 @@ m-settingsV2__blockedChannels {
       .m-settingsV2BlockedChannel__actions {
         margin-top: 8px;
       }
+      .m-settingsV2BlockedChannel__username {
+        max-width: 100%;
+      }
     }
   }
   a.m-settingsV2BlockedChannel__detailsWrapper {
-    flex-grow: 1;
+    flex: 1 1 auto;
+    min-width: 200px;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    margin-right: 20px;
 
     text-decoration: none;
     font-size: 16px;
@@ -49,7 +55,9 @@ m-settingsV2__blockedChannels {
   }
 
   .m-settingsV2BlockedChannel__username {
-    flex-grow: 1;
+    // flex-grow: 1;
+    width: 100%;
+    max-width: 280px;
     overflow: hidden;
     text-overflow: ellipsis;
   }
